--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -130,6 +130,15 @@ html {
 .border-img img {
   border-radius: 50%;
   border: 0.5px solid black;
+  margin: 0 auto;
+}
+.mb-10 {
+  margin-bottom: 5em;
+}
+
+.mt-10 {
+  margin-top: 5em;
+  padding-bottom: 2em;
 }
 
 .border-img {
@@ -173,4 +182,15 @@ html {
 
 .text-black {
   color: black;
+}
+
+.carousel-box {
+  width: 100%;
+  height: auto;
+}
+
+.carousel-box img {
+  width: 100%;
+  height: 512px;
+  object-fit: contain;
 }
